fix(firefox): fix userChrome, active tab and flickering popup

--- a/firefox/userChrome.css
+++ b/firefox/userChrome.css
@@ -3,7 +3,10 @@
 }
 
 #nav-bar {
-  visibility: collapse !important;
+  /* visibility: collapse !important; */
+  min-height: 0px !important;
+  max-height: 0px !important;
+  overflow: hidden !important;
   box-shadow: none !important;
 }
 
@@ -13,19 +16,18 @@
 
 .titlebar-spacer[type='pre-tabs'],
 .titlebar-spacer[type='post-tabs'] {
-  /* display: none !important; */
   width: 8px !important;
   padding: 0;
   margin: 0;
 }
 
-.tab-background[selected='true'] {
+.tabbrowser-tab[selected] .tab-background {
   background-color: rgb(32, 37, 45) !important;
   background-image: none !important;
   box-shadow: none !important;
 }
 
-.tab-content[selected='true'] {
+.tabbrowser-tab[selected] .tab-content {
   color: #eceff4 !important;
 }
 
